amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-definition
  Message: Interface definitions must have at least one field
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-interface.api.graphql#/declares/shape/HasId
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,0)-(13,15)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: '}'
  Severity: Violation
  Target: 
  Property: 
  Range: [(14,0)-(14,1)]
  Location: 
